--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -804,6 +804,35 @@
         href: articles/report-designer/report-designer-for-winforms/customize-appearance/report-visual-styles.md
       - name: Report Style Sheets
         href: articles/report-designer/report-designer-for-winforms/customize-appearance/report-style-sheets.md
+    - name: Add Navigation
+      href: articles/report-designer/report-designer-for-winforms/add-navigation.md
+      items:
+      - name: Add Page Numbers
+        href: articles/report-designer/report-designer-for-winforms/add-navigation/add-page-numbers.md
+      - name: Add Cross-References and Hyperlinks
+        href: articles/report-designer/report-designer-for-winforms/add-navigation/add-cross-references-and-hyperlinks.md
+      - name: Add Bookmarks and a Document Map
+        href: articles/report-designer/report-designer-for-winforms/add-navigation/add-bookmarks-and-a-document-map.md
+      - name: Add a Table of Contents
+        href: articles/report-designer/report-designer-for-winforms/add-navigation/add-a-table-of-contents.md
+    - name: Provide Interactivity
+      href: articles/report-designer/report-designer-for-winforms/provide-interactivity.md
+      items:
+      - name: Create Drill-Down Reports
+        href: articles/report-designer/report-designer-for-winforms/provide-interactivity/create-drill-down-reports.md
+      - name: Sort a Report in Print Preview
+        href: articles/report-designer/report-designer-for-winforms/provide-interactivity/sort-a-report-in-print-preview.md
+      - name: Edit Content in Print Preview
+        href: articles/report-designer/report-designer-for-winforms/provide-interactivity/edit-content-in-print-preview.md
+    - name: Add Extra Information
+      href: articles/report-designer/report-designer-for-winforms/add-extra-information.md
+      items:
+      - name: Add Watermarks to a Report
+        href: articles/report-designer/report-designer-for-winforms/add-extra-information/add-watermarks-to-a-report.md
+      - name: Display the User Name in a Report
+        href: articles/report-designer/report-designer-for-winforms/add-extra-information/display-the-user-name-in-a-report.md
+      - name: Display the Current Date and Time in a Report
+        href: articles/report-designer/report-designer-for-winforms/add-extra-information/display-the-current-date-and-time-in-a-report.md
     - name: Use Expressions
       href: articles/report-designer/report-designer-for-winforms/use-expressions.md
       items:
@@ -914,18 +943,18 @@
       - name: Toolbar
         href: articles/report-designer/report-designer-for-winforms/report-designer-tools/toolbar.md
       - name: UI Panels
-        href: articles\report-designer\report-designer-for-winforms\report-designer-tools\ui-panels.md
+        href: articles/report-designer/report-designer-for-winforms/report-designer-tools/ui-panels.md
         items:
         - name: Report Explorer
-          href: articles\report-designer\report-designer-for-winforms\report-designer-tools\ui-panels\report-explorer.md
+          href: articles/report-designer/report-designer-for-winforms/report-designer-tools/ui-panels/report-explorer.md
         - name: Field List
-          href: articles\report-designer\report-designer-for-winforms\report-designer-tools\ui-panels\field-list.md          
+          href: articles/report-designer/report-designer-for-winforms/report-designer-tools/ui-panels/field-list.md          
         - name: Report Gallery
-          href: articles\report-designer\report-designer-for-winforms\report-designer-tools\ui-panels\report-gallery.md
+          href: articles/report-designer/report-designer-for-winforms/report-designer-tools/ui-panels/report-gallery.md
         - name: Property Grid
-          href: articles\report-designer\report-designer-for-winforms\report-designer-tools\ui-panels\property-grid.md
+          href: articles/report-designer/report-designer-for-winforms/report-designer-tools/ui-panels/property-grid.md
         - name: Group and Sort Panel
-          href: articles\report-designer\report-designer-for-winforms\report-designer-tools\ui-panels\group-and-sort-panel.md          
+          href: articles/report-designer/report-designer-for-winforms/report-designer-tools/ui-panels/group-and-sort-panel.md          
   - name: Report Designer for WinForms
     href: articles/report-designer/report-designer-for-winforms-old.md
     items:
